# ContactManager

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
DatabaseSolution/: CMakeLists.txt  ContactClass.cpp  ContactClass.h  DatabaseSolution_global.h  databaseclass.cpp  databaseclass.h  databasesolution.cpp  databasesolution.h  personalcontactclass.cpp  personalcontactclass.h  privatecontactclass.cpp  privatecontactclass.h
